# auv-host

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  adjust_threshold.py  auv-application  compile.sh  main.lua  upload.sh
application/: CMakeLists.txt  lua_interop.cpp  lua_interop.h  main.cpp
application/lua/: .luarc.json  ball_block.lua  bar_block.lua  detect_block.lua  door_block.lua  door_grid_block.lua  main.lua  main_block.lua  utils.lua
application/test/: test.cpp
client/: CMakeLists.txt  connect_server.cpp  connect_server.h  main.cpp
cmake/: FindLuaJit.cmake  FindReadline.cmake
communication/: CMakeLists.txt  lua_interop.cpp  lua_interop.h  rov_control_block.cpp  rov_control_block.h  rov_controller.cpp  rov_controller.h
model_data/: marine.data  marine.names  marine.onnx
runtime/: CMakeLists.txt  application.cpp  application.h  block.h  concurrent.cpp  concurrent.h  connect_rov.cpp  connect_rov.h  lua.cpp  lua.h  lua_block.cpp  lua_block.h  lua_config.cpp  lua_config.h  lua_interop.cpp  lua_interop.h  main.cpp  operator_rov_block.cpp  operator_rov_block.h
runtime/test/: test.cpp  test.h
server/: CMakeLists.txt  application.h  connect_client.cpp  connect_client.h  connect_rov.cpp  connect_rov.h  lua.cpp  lua.h  lua_config.h  main.cpp
server/algorithm/: CMakeLists.txt  block.h  video_capture.cpp  video_capture.h
vision/: CMakeLists.txt  block.cpp  block.h  camera.cpp  camera.h  camera_mgr.cpp  camera_mgr.h  common.h  lua_interop.cpp  lua_interop.h  red_bar.cpp  red_bar.h  red_door.cpp  red_door.h  utils.cpp  utils.h
vision/block/: biology.cpp  biology.h  camera.cpp  camera.h  camera_calibr.cpp  camera_calibr.h  color.cpp  color.h  detect.cpp  detect.h  find_ball.cpp  find_ball.h  find_bar.cpp  find_bar.h  find_door.cpp  find_door.h  find_door_grid.cpp  find_door_grid.h  find_line.cpp  find_line.h  imshow.cpp  imshow.h  inrange.cpp  inrange.h
vision/neural_network/: yolo_fast_v2.h
vision/nn/: model_lib.cpp  model_lib.h  yolo_fast_v2.cpp  yolo_fast_v2.h
vision/test/: red_bar.cpp  test.cpp
